<resources>
    <string name="app_name">Pa&amp;Ma</string>
    <string name="created_by">Creado por David Volart</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">¿No tienes una cuenta? Regístrate ahora</string>
    <string name="name">Nombre</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="exPartnerEmail">Email de tu expareja</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="child_data">Datos del niño</string>
    <string name="calendar">Calendario</string>
    <string name="chat">Chat</string>
    <string name="expenses">Gastos</string>
    <string name="vaccines">Vacunas</string>
    <string name="sizes">Tallas</string>
    <string name="create">Crear</string>
    <string name="cancel">Cancelar</string>
    <string name="vaccine_name">Nombre vacuna</string>
    <string name="date">Fecha</string>
    <string name="id">DNI/NIE</string>
    <string name="id_hint">12345678G</string>
    <string name="health_care_number">Numero de la targeta sanitaria</string>
    <string name="health_care_number_hint">GaFe0981104005</string>
    <string name="birthdate">Fecha nacimiento</string>
    <string name="shirt_size">Talla Camiseta</string>
    <string name="weight">Peso</string>
    <string name="dress_size">Talla vestido</string>
    <string name="pants_size">Talla pantalón</string>
    <string name="height">Altura</string>
    <string name="shoes_size">Talla zapatos</string>
    <string name="have_code">Tienes un código?</string>
    <string name="child_name">Nombre del niño</string>
    <string name="register_family">Crear familia</string>
    <string name="nannies">Nannies</string>
    <string name="tasks">Tareas</string>
    <string name="expenditure_name">Nombre</string>
    <string name="expenditure_price">Precio</string>
    <string name="expenditure_description">Descripción</string>
    <string name="assigne_me">Assignar a mi</string>
    <string name="signOut">Cerrar sesión</string>
    <string name="search">Buscar</string>
    <string name="SelectDate">Seleccione una fecha</string>
    <string name="SelectStartTime">Seleccione una hora de inicio</string>
    <string name="SelectEndTime">Seleccione una hora de fin</string>
    <string name="not_assigned">Sin asignar</string>
    <string name="actualLocation">Ubicación actual:</string>
    <string name="SendMessage">Enviar</string>
    <string name="TypeMessage">Escribe un mensaje</string>
    <string name="events">Eventos</string>
    <string name="list">Lista</string>
    <string name="graphic">Grafica</string>
</resources>
