<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@drawable/gradient_color">

    <ImageView
        android:id="@+id/add_vaccine_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/family" />

    <EditText
        android:id="@+id/add_vaccine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorBlueDark"
        android:ems="10"
        android:hint="@string/vaccine_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/add_vaccine_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorBlueDark"
        android:ems="10"
        android:hint="@string/date" />

    <Button
        android:id="@+id/add_vaccine_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/create" />

    <Button
        android:id="@+id/add_vaccine_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/cancel" />

</LinearLayout>