<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color">

    <TextView
        android:id="@+id/nannies_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="60dp"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/nannies_search_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="70dp"
        android:ems="15"
        android:hint="@string/SelectDate" />

    <EditText
        android:id="@+id/nannies_search_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:focusable="false"
        android:inputType="time"
        android:ems="15"
        android:hint="@string/SelectStartTime" />


    <EditText
        android:id="@+id/nannies_search_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:focusable="false"
        android:inputType="time"
        android:ems="15"
        android:hint="@string/SelectEndTime" />

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:focusable="false"
        android:inputType="time"
        android:ems="15"
        android:text="" />

    <Button
        android:id="@+id/nannies_search_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/search" />

</LinearLayout>