<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="@drawable/gradient_color">

        <ImageView
            android:id="@+id/logIn_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/family" />

        <EditText
            android:id="@+id/logIn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/logIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
             />

        <Button
            android:id="@+id/logIn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_rounded"
            android:text="@string/sign_in"
           />

        <Button
            android:id="@+id/logIn_singUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_rounded_border"
            android:text="@string/sign_up"
            />

    </LinearLayout>

</ScrollView>