<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_child_sizes_shirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shirt_size"
            android:textSize="20dp"
            android:textColor="#070707" />

        <EditText
            android:id="@+id/child_sizes_shirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="9"
            android:textColor="#FDFBFB"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_child_sizes_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="#070707"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/child_sizes_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="9"
            android:textColor="#FDFBFB"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_child_sizes_dress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dress_size"
            android:textColor="#070707"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/child_sizes_dress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="9"
            android:textColor="#FDFBFB"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_child_sizes_pants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pants_size"
            android:textColor="#070707"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/child_sizes_pants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_child_sizes_pants"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="9"
            android:textColor="#FDFBFB"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_child_sizes_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/child_sizes_pants"
            android:text="@string/height"
            android:textColor="#070707"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/child_sizes_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_child_sizes_height"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="9"
            android:textColor="#FDFBFB"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_child_sizes_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/child_sizes_height"
            android:text="@string/shoes_size"
            android:textColor="#070707"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/child_sizes_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_child_sizes_shoes"
            android:backgroundTint="@color/colorBlueDark"
            android:ems="9"
            android:textColor="#FDFBFB"
            android:importantForAutofill="no"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/child_sizes_data_save"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_social"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_save" />
    </RelativeLayout>
</LinearLayout>